# textcube_to_jekyll

./: .gitignore  README.md  pyproject.toml
jekyll/assets/: ttml.js  ttml.scss
textcube_to_jekyll/: archive_org.py  cli.py  const.py  converter.py  filters.py  models.py  template.py  util.py
textcube_to_jekyll/templates/: post.html
textcube_to_jekyll/templates/ttml/: attachment.html  footnote.html  moreless.html
